Colaboratory を使用して作成しました

--- a/tutorial_image_classification.ipynb
+++ b/tutorial_image_classification.ipynb
@@ -88,7 +88,7 @@
         "\n",
         "n_img = 200\n",
         "class1_name = \"cat\"\n",
-        "class1_keyword = \"ねこ\"\n",
+        "class1_keyword = \"狐\"\n",
         "class2_name = \"dog\"\n",
         "class2_keyword = \"いぬ\"\n",
         "\n",
