Colaboratory を使用して作成しました

--- a/tutorial_image_classification.ipynb
+++ b/tutorial_image_classification.ipynb
@@ -88,9 +88,9 @@
         "\n",
         "n_img = 200\n",
         "class1_name = \"cat\"\n",
-        "class1_keyword = \"狐\"\n",
+        "class1_keyword = \"猫\"\n",
         "class2_name = \"dog\"\n",
-        "class2_keyword = \"いぬ\"\n",
+        "class2_keyword = \"犬\"\n",
         "\n",
         "# 猫の画像を取得\n",
         "crawler = BingImageCrawler(storage={\"root_dir\": class1_name}, log_level=logging.INFO, parser_threads=2, downloader_threads=4,)\n",
