Colaboratory を使用して作成しました

--- a/tutorial_image_classification.ipynb
+++ b/tutorial_image_classification.ipynb
@@ -91,6 +91,8 @@
         "class1_keyword = \"猫\"\n",
         "class2_name = \"dog\"\n",
         "class2_keyword = \"犬\"\n",
+        "class3_name = \"rabit\"\n",
+        "class3_keyword = \"うさぎ\"\n",
         "\n",
         "# 猫の画像を取得\n",
         "crawler = BingImageCrawler(storage={\"root_dir\": class1_name}, log_level=logging.INFO, parser_threads=2, downloader_threads=4,)\n",
@@ -100,9 +102,14 @@
         "crawler = BingImageCrawler(storage={\"root_dir\": class2_name}, log_level=logging.INFO, parser_threads=2, downloader_threads=4,)\n",
         "crawler.crawl(keyword=class2_keyword, max_num=n_img)\n",
         "\n",
+        "# うさぎの画像を取得\n",
+        "crawler = BingImageCrawler(storage={\"root_dir\": class3_name}, log_level=logging.INFO, parser_threads=2, downloader_threads=4,)\n",
+        "crawler.crawl(keyword=class3_keyword, max_num=n_img)\n",
+        "\n",
         "# ダウンロード用のzipファイル生成\n",
         "!zip -r $class1_name $class1_name\n",
-        "!zip -r $class2_name $class2_name"
+        "!zip -r $class2_name $class2_name\n",
+        "!zip -r $class3_name $class3_name"
       ],
       "metadata": {
         "id": "x0YCoJH3HGBB"
