Colaboratory を使用して作成しました

--- a/tutorial_image_classification_GomiBnbetu.ipynb
+++ b/tutorial_image_classification_GomiBnbetu.ipynb
@@ -55,9 +55,32 @@
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
-        "id": "xjNaaO6pElys"
+        "id": "xjNaaO6pElys",
+        "outputId": "31eb2c5a-b28e-4641-c254-753d388bc254",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Looking in indexes: https://pypi.org/simple, https://us-python.pkg.dev/colab-wheels/public/simple/\n",
+            "Requirement already satisfied: icrawler in /usr/local/lib/python3.10/dist-packages (0.6.6)\n",
+            "Requirement already satisfied: beautifulsoup4>=4.4.1 in /usr/local/lib/python3.10/dist-packages (from icrawler) (4.11.2)\n",
+            "Requirement already satisfied: lxml in /usr/local/lib/python3.10/dist-packages (from icrawler) (4.9.2)\n",
+            "Requirement already satisfied: requests>=2.9.1 in /usr/local/lib/python3.10/dist-packages (from icrawler) (2.27.1)\n",
+            "Requirement already satisfied: six>=1.10.0 in /usr/local/lib/python3.10/dist-packages (from icrawler) (1.16.0)\n",
+            "Requirement already satisfied: Pillow in /usr/local/lib/python3.10/dist-packages (from icrawler) (8.4.0)\n",
+            "Requirement already satisfied: soupsieve>1.2 in /usr/local/lib/python3.10/dist-packages (from beautifulsoup4>=4.4.1->icrawler) (2.4.1)\n",
+            "Requirement already satisfied: urllib3<1.27,>=1.21.1 in /usr/local/lib/python3.10/dist-packages (from requests>=2.9.1->icrawler) (1.26.15)\n",
+            "Requirement already satisfied: certifi>=2017.4.17 in /usr/local/lib/python3.10/dist-packages (from requests>=2.9.1->icrawler) (2022.12.7)\n",
+            "Requirement already satisfied: charset-normalizer~=2.0.0 in /usr/local/lib/python3.10/dist-packages (from requests>=2.9.1->icrawler) (2.0.12)\n",
+            "Requirement already satisfied: idna<4,>=2.5 in /usr/local/lib/python3.10/dist-packages (from requests>=2.9.1->icrawler) (3.4)\n"
+          ]
+        }
+      ],
       "source": [
         "# 必要なパッケージをインストール\n",
         "# !から始まる行はshell command (Pythonではない)\n",
@@ -468,26 +491,10 @@
         "history = model.fit(train_X, train_y, epochs=30, batch_size=32)"
       ],
       "metadata": {
-        "id": "avYEp9lzJp1q",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "outputId": "17a7fe00-5767-4676-a26a-4bf0719f8664"
+        "id": "avYEp9lzJp1q"
       },
       "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "Epoch 1/30\n",
-            "30/30 [==============================] - 202s 6s/step - loss: 1.0939 - accuracy: 0.4104\n",
-            "Epoch 2/30\n",
-            "30/30 [==============================] - 183s 6s/step - loss: 1.0823 - accuracy: 0.4104\n",
-            "Epoch 3/30\n"
-          ]
-        }
-      ]
+      "outputs": []
     },
     {
       "cell_type": "code",
